🔀 Kiosk Flavor 설정 추가 및 주요 코드 리팩토링
**Why:**
- 다양한 환경(개발/프로덕션)에 맞는 동작을 지원하기 위해 Flavor 설정을 도입.
- 사용자 경험 향상을 위해 로딩 오버레이 추가 및 DialogHelper 개선.
- 코드 가독성과 유지보수성을 위해 구조화 및 리팩토링 진행.

**How:**
1. Flavor 설정:
   - `lib/flavors.dart` 추가로 환경별 설정 관리.
   - `main.dart`에서 환경에 따라 Flavor 설정.

2. 주요 개선 사항:
   - QR 코드 데이터 동적 생성(`PhotoCardUploadScreen`).
   - `DialogHelper` 리팩토링: `BuildContext`를 전역 키로 대체하여 사용 편의성 향상.
   - 로딩 오버레이(`loader_overlay`) 추가로 비동기 작업 동안 사용자 피드백 제공.

3. 구조 개선:
   - `KioskShell`과 `ContentsShell`로 UI 구조 분리.
   - 네비게이션 전역 키 추가 및 라우터 리팩토링.

4. 추가 의존성:
   - `loader_overlay` 및 `back_button_interceptor` 패키지 추가.

**Tags:**

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   qr_flutter: ^4.1.0
   flutter_screenutil: ^5.9.3
   palette_generator: ^0.3.3+5
+  loader_overlay: ^5.0.0
 
 
 dev_dependencies:
