--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_screenutil: ^5.9.3
   palette_generator: ^0.3.3+5
   loader_overlay: ^5.0.0
+  url_launcher: ^6.3.1
 
 
 dev_dependencies:
