--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,13 +38,15 @@ dependencies:
   palette_generator: ^0.3.3+5
   loader_overlay: ^5.0.0
   url_launcher: ^6.3.1
+  material_components:
+    path: ./material_components
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^5.0.0
 
+  flutter_lints: ^5.0.0
   # Code Generation
   build_runner: ^2.4.14
   riverpod_generator: ^2.3.9
