🧹 코드베이스 구조 정리 및 이미지 처리 로직 개선
**Why:**
- 서비스의 파일 처리 및 네트워크 관련 기능을 개선하여 코드 가독성과 유지보수성을 높이기 위함.
- 프론트 이미지 저장 및 관리를 효율적으로 처리하기 위해 로직 최적화 필요.
- 불필요하거나 중복된 파일 제거 및 네비게이션 로직 단순화.

**How:**
1. **코드 리팩토링 및 최적화:**
   - `FileSystemService`와 `ImageStorageService`에서 공통 로직 분리 및 기능 확장.
   - 경로 생성 로직 개선(`fileName` 인자를 선택적으로 추가).
   - 네트워크 요청 및 이미지 처리 로직 리팩토링.

2. **프로바이더 및 상태 관리 개선:**
   - `frontPhotoListProvider`, `asyncKioskInfoProvider` 등을 리팩토링하여 상태 관리 효율성 증가.
   - 관련 G.dart 및 Freezed 모델 업데이트.

3. **UI 개선 및 통합:**
   - `FrontImagesAction`, `FilePathActions`와 같은 공통 위젯 도입으로 UI 코드 단순화.
   - `KioskInfoScreen`의 정보를 보기 쉽게 개선.

4. **라우터 정리:**
   - `/image-storage`, `/kiosk-colors` 등의 사용되지 않는 라우트 제거.
   - `AdminShell`의 라우터 동적 생성으로 관리 효율성 향상.

5. **불필요한 파일 제거 및 `.gitignore` 관리:**
   - 자동 생성된 파일과 필요 없는 리소스를 `.gitignore`에 추가.

**Tags:**
#refactoring #flutter #state-management #ui #code-cleanup

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   url_launcher: ^6.3.1
   material_components:
     path: ./material_components
+  faker: ^2.2.0
 
 
 dev_dependencies:
