✨ 키오스크 예외 처리 및 플러그인 추가
**Why:**
- 키오스크 설정 오류(키오스크 ID 또는 이벤트 ID 누락) 발생 시 명확한 예외 처리가 필요했습니다.
- UI 창 관리 및 화면 정보 검색 기능을 추가하기 위해 관련 플러그인 추가가 필요했습니다.

**How:**
1. **키오스크 예외 처리:**
   - `KioskErrorType` 추가: 키오스크 ID 및 이벤트 ID 관련 에러 메시지를 구분.
   - `KioskException` 업데이트: 예외 타입에 따라 메시지를 동적으로 설정하도록 수정.
   - 예외 발생 시 사용자에게 관련 파일 경로를 표시하는 UI 추가(`FilePathActions` 활용).

2. **FrontImagesProvider 개선:**
   - 키오스크 이벤트 ID 누락 시 `KioskException`을 통해 예외 처리.
   - `fetch` 메서드 간소화 및 불필요한 로직 제거.

3. **새 플러그인 추가:**
   - `window_manager`: 창 크기 및 위치 제어.
   - `screen_retriever`: 화면 정보 검색.

4. **플러그인 설정:**
   - `pubspec.yaml` 및 `Podfile.lock`, Windows/MacOS 설정 파일 업데이트.
   - 플러그인 관련 코드 생성 및 등록.

5. **코드 정리:**
   - 불필요한 파일 제거 및 관련 경로 정리.
   - `locale_keys.dart` 코드 생성 및 기존 경로 정리.

**Tags:**
#enhancement #exception-handling #flutter #plugin-integration #refactor

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   material_components:
     path: ./material_components
   faker: ^2.2.0
+  window_manager: ^0.4.3
 
 
 dev_dependencies:
