✨ 프린터 테스트 및 에러 핸들링 로직 추가
**Why:**
- 프린터 기능 구현 및 테스트가 필요함.
- 앱 실행 중 발생하는 에러를 기록하고 관리하기 위한 시스템 부재.

**How:**
1. **프린터 기능:**
   - `PrinterBindings` 클래스 정의로 프린터 관련 DLL 함수 연결.
   - `PrinterState` 및 `PrinterSettingsState` 추가로 상태 관리.
   - `PrintTestScreen` 구현으로 프린터 설정 및 테스트 지원.

2. **에러 핸들링:**
   - `AppErrorHandler` 클래스 추가로 모든 Flutter 및 비동기 에러 처리.
   - 로그 파일 생성 및 오래된 로그 정리 기능 구현.

3. **라우팅 업데이트:**
   - `/print-test` 경로를 통한 프린터 테스트 화면 접근 가능.

4. **코드 정리 및 재구조화:**
   - `splash_screen.dart` 위치 변경.
   - `presentation.dart` 삭제 및 불필요한 코드 제거.

**Tags:**

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   faker: ^2.2.0
   window_manager: ^0.4.3
   http: ^1.2.2
+  image: ^4.5.2
 
 
 dev_dependencies:
@@ -64,6 +65,8 @@ flutter:
   assets:
     - assets/lang/
     - assets/images/
+    - assets/luka/
+    
   fonts:
     - family: PretendardJP
       fonts:
