🚚 SDK 의존성 추가
**Why:**
- SDK 관련 추가 의존성을 반영

**How:**
1. **파일 구조 변경:**
   - `assets/luka` → `assets/luca` 디렉토리로 리네이밍.

2. **새 파일 추가:**
   - `assets/luca/DSRCPCLR_44_V2_1.icm`, `EWL`, `RSWOP.icm`, `Retransfer600_SDKCfg.xml` 등 SDK 의존 파일 추가.

3. **의존성 관리:**
   - `pubspec.yaml`에 SDK 파일을 반영하거나 관련 작업 업데이트.

**Tags:**
#restructure #sdk #assets #dependency

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,7 +65,7 @@ flutter:
   assets:
     - assets/lang/
     - assets/images/
-    - assets/luka/
+    - assets/luca/
     
   fonts:
     - family: PretendardJP
