--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,3 @@
 {
-  "cSpell.words": [
-    "Labcurity",
-    "photocard",
-    "snaptag"
-  ]
+  "cSpell.words": ["Labcurity", "luca", "photocard", "snaptag"]
 }
