🌍 다국어 지원 및 홈 버튼 추가로 UI 개선
**Why:**
- 사용자의 언어 선택 경험을 향상시키기 위해 플래그 아이콘 추가 필요.
- 홈 버튼 추가로 내비게이션 편의성 개선.

**What:**
1. **새로운 아이콘 및 이미지 리소스 추가**
   - 플래그 아이콘: `flag_jp.svg`, `flag_kr.svg`, `flag_us.svg`
   - 내비게이션 아이콘: `home.svg`, `arrow_down.svg`
   - 이미지 추가: `am.png`, `jp.png`, `kr.png`, `arrow_down.png`

2. **UI/UX 개선**
   - `language_switcher.dart`: 플래그 아이콘을 활용한 언어 선택 UI 개선.
   - `home_button.dart`: 홈 버튼 추가로 사용자 이동 편의성 증가.
   - `kiosk_shell.dart`: UI 개선 및 새로운 버튼 적용.

3. **프로젝트 의존성 반영**
   - `pubspec.yaml` 및 `pubspec.lock` 업데이트.

**How:**
- `assets/icons`, `assets/images` 디렉토리에 리소스 추가.
- `language_switcher.dart`에 플래그 아이콘 적용.
- `home_button.dart` 추가하여 홈 버튼 기능 구현.
- `kiosk_shell.dart`에서 홈 버튼 적용 및 UI 수정.
- `pubspec.yaml`에 `flutter_assets` 경로 등록하여 사용 가능하도록 설정.

**Tags:**
#i18n #localization #ui #ux #flutter #design #navigation

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   http: ^1.2.2
   image: ^4.5.2
   file_picker: ^8.1.7
+  flutter_svg: ^2.0.17
 
 
 dev_dependencies:
@@ -64,8 +65,10 @@ flutter:
   uses-material-design: true
 
   assets:
-    - assets/lang/
+    - assets/icons/
     - assets/images/
+    - assets/labcurity/
+    - assets/lang/
     - assets/luca/
     
   fonts:
