--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   image: ^4.5.2
   file_picker: ^8.1.7
   flutter_svg: ^2.0.17
+  just_audio: ^0.9.46
 
 
 dev_dependencies:
@@ -70,6 +71,7 @@ flutter:
     - assets/labcurity/
     - assets/lang/
     - assets/luca/
+    - assets/sounds/
     
   fonts:
     - family: PretendardJP
