--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,7 +46,7 @@ dependencies:
   image: ^4.5.2
   file_picker: ^8.1.7
   flutter_svg: ^2.0.17
-  just_audio: ^0.9.46
+  flutter_soloud: ^2.1.7
 
 
 dev_dependencies:
