--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   file_picker: ^8.1.7
   flutter_svg: ^2.0.17
   flutter_soloud: ^2.1.7
+  flutter_dotenv: ^5.2.1
 
 
 dev_dependencies:
@@ -66,6 +67,7 @@ flutter:
   uses-material-design: true
 
   assets:
+    - assets/.env
     - assets/icons/
     - assets/images/
     - assets/labcurity/
