🔄 `pretty_dio_logger` 원복 및 로깅 개선
**Why:**
- `pretty_dio_logger`를 제거한 후 디버깅이 불편해졌으며, 요청 및 응답을 보다 쉽게 확인할 필요가 있음.
- `DioLogger`와 함께 `pretty_dio_logger`를 추가하여 로깅의 가독성을 개선.

**What:**
- `pretty_dio_logger` 패키지를 다시 추가하고 `pubspec.yaml` 및 `pubspec.lock` 업데이트.
- `dio_client.dart`에서 `pretty_dio_logger`를 다시 적용.
- `DioLogger`와 함께 `PrettyDioLogger`를 추가하여 요청 및 응답 로깅 강화.
  - `requestHeader: true`, `requestBody: true`, `responseHeader: true` 설정을 활성화하여 디버깅 용이.

**How:**
- `pubspec.yaml`에 `pretty_dio_logger: ^1.4.0` 추가.
- `Dio` 인스턴스의 인터셉터에 `PrettyDioLogger` 추가.
- `SlackLogService().sendLogToSlack`과 함께 동작하도록 `DioLogger` 유지.

**Tags:**
#logging #dio #debugging #refactoring

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   flutter_svg: ^2.0.17
   flutter_soloud: ^2.1.7
   flutter_dotenv: ^5.2.1
+  pretty_dio_logger: ^1.4.0
 
 
 dev_dependencies:
