--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flutter_snaptag_kiosk
 description: "A new Flutter project."
-publish_to: 'none'
+publish_to: "none"
 version: 0.1.0
 
 environment:
@@ -13,7 +13,6 @@ dependencies:
   # Network
   dio: ^5.7.0
   retrofit: ^4.4.1
-
 
   # State Management
   flutter_riverpod: ^2.6.1
@@ -31,11 +30,8 @@ dependencies:
 
   # Utilities
   logger: ^2.5.0
-  yaml_edit: ^2.2.2
-  yaml: ^3.1.3
   qr_flutter: ^4.1.0
   flutter_screenutil: ^5.9.3
-  palette_generator: ^0.3.3+5
   loader_overlay: ^5.0.0
   url_launcher: ^6.3.1
   faker: ^2.2.0
@@ -47,7 +43,6 @@ dependencies:
   flutter_soloud: ^2.1.7
   flutter_dotenv: ^5.2.1
   pretty_dio_logger: ^1.4.0
-
 
 dev_dependencies:
   flutter_test:
@@ -74,7 +69,7 @@ flutter:
     - assets/lang/
     - assets/luca/
     - assets/sounds/
-    
+
   fonts:
     - family: PretendardJP
       fonts:
