--- a/.github/workflows/test-release-build.yml
+++ b/.github/workflows/test-release-build.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   build:
-    if: startsWith(github.ref, 'refs/tags/v') && github.ref_name == 'feature/ci-test-build'
+    if: startsWith(github.ref, 'refs/tags/test-v')
     runs-on: windows-latest
 
     steps:
