--- a/.github/workflows/test-release-build.yml
+++ b/.github/workflows/test-release-build.yml
@@ -21,14 +21,20 @@ jobs:
           flutter-version: '3.29.1' # Flutter 버전에 맞게 수정
           channel: stable
 
+      - name: Enable Windows Build
+        run: flutter config --enable-windows-desktop
+
+      - name: Ensure Windows project exists
+        run: |
+          if (-Not (Test-Path "windows")) {
+            flutter create .
+          }
+
       - name: Install Dependencies
         run: flutter pub get
         
       - name: Run Build Runner
         run: flutter pub run build_runner build --delete-conflicting-outputs
-        
-      - name: Enable Windows Build
-        run: flutter config --enable-windows-desktop
 
       - name: Build Windows Release
         run: flutter build windows --release
