fix: CI/CD 플러그인 자동 업그레이드 추가

--- a/.github/workflows/test-release-build.yml
+++ b/.github/workflows/test-release-build.yml
@@ -30,6 +30,9 @@ jobs:
             flutter create .
           }
 
+      - name: Upgrade Flutter Packages
+        run: flutter pub upgrade
+
       - name: Install Dependencies
         run: flutter pub get
         
