--- a/.github/workflows/test-release-build.yml
+++ b/.github/workflows/test-release-build.yml
@@ -39,6 +39,9 @@ jobs:
       - name: Run Build Runner
         run: flutter pub run build_runner build --delete-conflicting-outputs
 
+      - name: Disable "Treat Warnings As Errors"
+        run: sed -i 's/<TreatWarningAsErrors>true<\/TreatWarningAsErrors>/<TreatWarningAsErrors>false<\/TreatWarningAsErrors>/g' windows/flutter/ephemeral/.plugin_symlinks/flutter_soloud/flutter_soloud_plugin.vcxproj
+
       - name: Build Windows Release
         run: flutter build windows --release
 
