Fix: Disable "Treat Warnings As Errors" for Windows build
Why:
- Flutter Windows 빌드 시 일부 플러그인(`flutter_soloud_plugin.vcxproj`)이 `TreatWarningsAsErrors` 설정으로 인해 빌드 실패
- 기본적으로 CMake 기반이지만, 특정 플러그인은 `vcxproj` 사용
- 경고를 에러로 처리하지 않도록 설정하여 빌드 성공률 향상

What:
- `CMakeLists.txt`에 `/WX-` 플래그 추가하여 전체 빌드에서 경고를 무시하도록 설정
- `flutter_soloud_plugin.vcxproj`의 `TreatWarningsAsErrors` 값을 `false`로 변경

How:
- GitHub Actions에서 CMake 빌드 플래그 설정 (`set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /WX-")`)
- PowerShell 스크립트를 추가해 `.vcxproj` 파일의 설정을 자동으로 변경

Tag:️ #build #flutter #windows

--- a/.github/workflows/test-release-build.yml
+++ b/.github/workflows/test-release-build.yml
@@ -39,8 +39,16 @@ jobs:
       - name: Run Build Runner
         run: flutter pub run build_runner build --delete-conflicting-outputs
 
-      - name: Disable "Treat Warnings As Errors"
-        run: sed -i 's/<TreatWarningAsErrors>true<\/TreatWarningAsErrors>/<TreatWarningAsErrors>false<\/TreatWarningAsErrors>/g' windows/flutter/ephemeral/.plugin_symlinks/flutter_soloud/flutter_soloud_plugin.vcxproj
+      - name: Add CMake warning suppression flags
+        run: echo 'set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /WX-")' >> windows/CMakeLists.txt
+
+      - name: Disable "Treat Warnings As Errors" for vcxproj
+        run: |
+          if (Test-Path "windows/flutter/ephemeral/.plugin_symlinks/flutter_soloud/flutter_soloud_plugin.vcxproj") {
+            (Get-Content windows/flutter/ephemeral/.plugin_symlinks/flutter_soloud/flutter_soloud_plugin.vcxproj) `
+            -replace '<TreatWarningAsErrors>true</TreatWarningAsErrors>', '<TreatWarningAsErrors>false</TreatWarningAsErrors>' `
+            | Set-Content windows/flutter/ephemeral/.plugin_symlinks/flutter_soloud/flutter_soloud_plugin.vcxproj
+          }
 
       - name: Build Windows Release
         run: flutter build windows --release
