--- a/.github/workflows/test-release-build.yml
+++ b/.github/workflows/test-release-build.yml
@@ -66,7 +66,7 @@ jobs:
           flutter pub get
 
       - name: Build Windows Release
-        run: flutter build windows --release
+        run: flutter build windows --release --bundled-libraries
 
       - name: Verify Build Artifacts Before Archiving
         run: |
