Visual Studio 버전 자동 감지 및 VC++ Redistributable DLL 복사 기능 추가
- GitHub Actions에서 설치된 Visual Studio 버전을 자동으로 탐색하도록 수정
- 2022 → 2019 → 2017 순으로 Visual Studio가 설치된 디렉터리를 확인
- 발견된 버전에서 필요한 x64 DLL을 Release 폴더로 복사하여 실행 파일 실행 가능하도록 처리
- Visual Studio가 설치되지 않은 경우 경고 메시지를 출력하도록 설정

--- a/.github/workflows/test-release-build.yml
+++ b/.github/workflows/test-release-build.yml
@@ -66,7 +66,7 @@ jobs:
           flutter pub get
 
       - name: Build Windows Release
-        run: flutter build windows --release --bundled-libraries
+        run: flutter build windows --release
 
       - name: Verify Build Artifacts Before Archiving
         run: |
@@ -80,6 +80,23 @@ jobs:
 
       - name: List Build Directory
         run: Get-ChildItem -Path build/windows/x64/runner -Recurse
+
+      - name: Copy VC++ Redistributable DLLs
+        run: |
+          $vs_versions = @("2022", "2019", "2017")
+          $found = $false
+          foreach ($version in $vs_versions) {
+            $dll_path = "C:\Program Files\Microsoft Visual Studio\$version\Community\VC\Redist\MSVC\"
+            if (Test-Path $dll_path) {
+              echo "Found Visual Studio $version, copying DLLs..."
+              Copy-Item -Path "$dll_path*x64*.dll" -Destination "build/windows/x64/runner/Release/" -Recurse -Force
+              $found = $true
+              break
+            }
+          }
+          if (-Not $found) {
+            echo "No Visual Studio installation found! Please install the VC++ redistributable."
+          }
 
       - name: Archive Build
         run: Compress-Archive -Path build/windows/x64/runner/Release/* -DestinationPath test_release.zip
