.env 파일이 비어 있을 경우 기본값 추가

--- a/.github/workflows/test-release-build.yml
+++ b/.github/workflows/test-release-build.yml
@@ -15,6 +15,59 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
+      - name: Setup Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          flutter-version: '3.29.1' # Flutter 버전에 맞게 수정
+          channel: stable
+
+      - name: Clean and Setup Windows Build
+        run: |
+          flutter clean
+          flutter config --enable-windows-desktop
+          flutter create --platforms=windows .
+          flutter pub get
+
+      - name: Create .env file with default content if missing
+        run: |
+          $envFilePath = "assets/.env"
+          if (-Not (Test-Path $envFilePath)) {
+              "a" | Set-Content -Path $envFilePath
+          }
+
+      - name: Upgrade Flutter Packages
+        run: flutter pub upgrade
+
+      - name: Run Build Runner
+        run: flutter pub run build_runner build --delete-conflicting-outputs
+
+      - name: Add CMake warning suppression flags
+        run: echo 'set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /WX-")' >> windows/CMakeLists.txt
+
+      - name: Disable "Treat Warnings As Errors" for vcxproj
+        run: |
+          if (Test-Path "windows/flutter/ephemeral/.plugin_symlinks/flutter_soloud/flutter_soloud_plugin.vcxproj") {
+            (Get-Content windows/flutter/ephemeral/.plugin_symlinks/flutter_soloud/flutter_soloud_plugin.vcxproj) `
+            -replace '<TreatWarningAsErrors>true</TreatWarningAsErrors>', '<TreatWarningAsErrors>false</TreatWarningAsErrors>' `
+            | Set-Content windows/flutter/ephemeral/.plugin_symlinks/flutter_soloud/flutter_soloud_plugin.vcxproj
+          }
+
+      - name: Build Windows Release
+        run: flutter build windows --release
+
+      - name: Verify Build Artifacts Before Archiving
+        run: |
+          if (-Not (Test-Path "build/windows/x64/runner/Release")) {
+            echo "Error: Release folder does not exist!"
+            exit 1
+          }
+
+      - name: Check Build Directory
+        run: Get-ChildItem -Path build/windows/x64/runner/ -Name
+
+      - name: List Build Directory
+        run: Get-ChildItem -Path build/windows/x64/runner -Recurse
+
       - name: Install Visual Studio Build Tools if Missing & Copy VC++ Redistributable
         run: |
           $vswherePath = "${env:ProgramFiles(x86)}\Microsoft Visual Studio\Installer\vswhere.exe"
@@ -31,40 +84,25 @@ jobs:
           if (Test-Path $vswherePath) {
               $vsInstallPath = & $vswherePath -latest -products * -requires Microsoft.VisualStudio.Component.VC.Tools.x86.x64 -property installationPath
               if ($vsInstallPath) {
-                  Write-Output "✅ Found Visual Studio installation at: $vsInstallPath"
+                  Write-Output "Found Visual Studio installation at: $vsInstallPath"
                   $vcRedistPath = "$vsInstallPath\VC\Redist\MSVC"
-
-                  # 가장 최신 버전 폴더를 찾기
                   $latestRedistVersion = Get-ChildItem -Directory -Path $vcRedistPath | Sort-Object Name -Descending | Select-Object -First 1
                   if ($latestRedistVersion) {
-                      $latestRedistPath = Join-Path -Path $vcRedistPath -ChildPath "$($latestRedistVersion.Name)\x64"
-
-                      # Microsoft.VCxxx.CRT 폴더 찾기
-                      $crtFolder = Get-ChildItem -Directory -Path $latestRedistPath | Where-Object { $_.Name -match "^Microsoft\.VC\d+\.CRT$" } | Select-Object -First 1
-
-                      if ($crtFolder) {
-                          $fullCrtPath = Join-Path -Path $latestRedistPath -ChildPath $crtFolder.Name
-                          Write-Output "📂 Found CRT folder: $fullCrtPath"
-
-                          # DLL 파일이 실제로 존재하는지 확인
-                          $dllFiles = Get-ChildItem -Path $fullCrtPath -Filter "*.dll"
-                          if ($dllFiles.Count -gt 0) {
-                              Write-Output "✅ Copying VC++ Redistributable DLLs from: $fullCrtPath"
-                              Copy-Item -Path "$fullCrtPath\*" -Destination "build/windows/x64/runner/Release" -Force
-                          } else {
-                              Write-Output "⚠️ Warning: No DLL files found in $fullCrtPath"
-                          }
+                      $latestRedistPath = Join-Path -Path $vcRedistPath -ChildPath "$($latestRedistVersion.Name)\x64\Microsoft.VC143.CRT"
+                      if (Test-Path $latestRedistPath) {
+                          Write-Output "Copying VC++ Redistributable DLLs from: $latestRedistPath"
+                          Copy-Item -Path "$latestRedistPath\*" -Destination "build/windows/x64/runner/Release" -Force
                       } else {
-                          Write-Output "⚠️ Warning: No 'Microsoft.VCxxx.CRT' folder found in $latestRedistPath"
+                          Write-Output "Warning: Could not find VC++ Redistributable DLLs in $latestRedistPath"
                       }
                   } else {
-                      Write-Output "⚠️ Warning: No Redistributable versions found in $vcRedistPath"
+                      Write-Output "Warning: No Redistributable versions found in $vcRedistPath"
                   }
               } else {
-                  Write-Output "❌ Error: Visual Studio installation not found after installation!"
+                  Write-Output "Error: Visual Studio installation not found after installation!"
               }
           } else {
-              Write-Output "❌ Error: vswhere.exe not found! Visual Studio installation might have failed."
+              Write-Output "Error: vswhere.exe not found! Visual Studio installation might have failed."
           }
         shell: pwsh
 
