--- a/.github/workflows/test-release-build.yml
+++ b/.github/workflows/test-release-build.yml
@@ -1,4 +1,4 @@
-name: Test Release Build (Windows)
+name: Test Release and Debug Build (Windows)
 
 on:
   push:
@@ -55,18 +55,27 @@ jobs:
       - name: Build Windows Release
         run: flutter build windows --release
 
+      - name: Build Windows Debug
+        run: flutter build windows --debug
+
       - name: Verify Build Artifacts Before Archiving
         run: |
           if (-Not (Test-Path "build/windows/x64/runner/Release")) {
             echo "Error: Release folder does not exist!"
             exit 1
           }
+          if (-Not (Test-Path "build/windows/x64/runner/Debug")) {
+            echo "Error: Debug folder does not exist!"
+            exit 1
+          }
 
       - name: Check Build Directory
-        run: Get-ChildItem -Path build/windows/x64/runner/ -Name
-
-      - name: List Build Directory
-        run: Get-ChildItem -Path build/windows/x64/runner -Recurse
+        run: |
+          echo "Release Build:"
+          Get-ChildItem -Path build/windows/x64/runner/Release -Name
+          
+          echo "Debug Build:"
+          Get-ChildItem -Path build/windows/x64/runner/Debug -Name
 
       - name: Install Visual Studio Build Tools if Missing & Copy VC++ Redistributable
         run: |
@@ -92,6 +101,7 @@ jobs:
                       if (Test-Path $latestRedistPath) {
                           Write-Output "Copying VC++ Redistributable DLLs from: $latestRedistPath"
                           Copy-Item -Path "$latestRedistPath\*" -Destination "build/windows/x64/runner/Release" -Force
+                          Copy-Item -Path "$latestRedistPath\*" -Destination "build/windows/x64/runner/Debug" -Force
                       } else {
                           Write-Output "Warning: Could not find VC++ Redistributable DLLs in $latestRedistPath"
                       }
@@ -106,15 +116,19 @@ jobs:
           }
         shell: pwsh
 
-      - name: Archive Build
-        run: Compress-Archive -Path build/windows/x64/runner/Release/* -DestinationPath test_release.zip
+      - name: Archive Release and Debug Build
+        run: |
+          Compress-Archive -Path build/windows/x64/runner/Release/* -DestinationPath test_release.zip
+          Compress-Archive -Path build/windows/x64/runner/Debug/* -DestinationPath test_debug.zip
 
-      - name: Upload Release to GitHub
+      - name: Upload Release and Debug to GitHub
         uses: softprops/action-gh-release@v1
         with:
-          files: test_release.zip
-          body: "Automated test release build for Windows."
+          files: |
+            test_release.zip
+            test_debug.zip
+          body: "Automated test release and debug build for Windows."
           tag_name: ${{ github.ref_name }}
-          name: "Test Release - ${{ github.ref_name }}"
+          name: "Test Release & Debug - ${{ github.ref_name }}"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
