--- a/.github/workflows/test-release-build.yml
+++ b/.github/workflows/test-release-build.yml
@@ -21,11 +21,14 @@ jobs:
           flutter-version: '3.29.1' # Flutter 버전에 맞게 수정
           channel: stable
 
+      - name: Run Build Runner
+        run: dart pub run build_runner build --delete-conflicting-outputs
+
       - name: Clean and Setup Windows Build
         run: |
           flutter clean
           flutter config --enable-windows-desktop
-          flutter create --platforms=windows .
+          flutter create --platforms windows
           flutter pub get
 
       - name: Create .env file with SLACK_WEBHOOK_URL
@@ -35,9 +38,6 @@ jobs:
 
       - name: Upgrade Flutter Packages
         run: flutter pub upgrade
-
-      - name: Run Build Runner
-        run: flutter pub run build_runner build --delete-conflicting-outputs
 
       - name: Add CMake warning suppression flags
         run: echo 'set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /WX-")' >> windows/CMakeLists.txt
