--- a/.github/workflows/test-release-build.yml
+++ b/.github/workflows/test-release-build.yml
@@ -21,23 +21,25 @@ jobs:
           flutter-version: '3.29.1' # Flutter 버전에 맞게 수정
           channel: stable
 
-      - name: Run Build Runner
-        run: dart pub run build_runner build --delete-conflicting-outputs
-
       - name: Clean and Setup Windows Build
         run: |
           flutter clean
           flutter config --enable-windows-desktop
-          flutter create --platforms windows
+          flutter create --platforms=windows .
           flutter pub get
 
-      - name: Create .env file with SLACK_WEBHOOK_URL
+      - name: Create .env file with default content if missing
         run: |
           $envFilePath = "assets/.env"
-          "SLACK_WEBHOOK_URL=${{ secrets.SLACK_WEBHOOK_URL }}" | Set-Content -Path $envFilePath
+          if (-Not (Test-Path $envFilePath)) {
+              "a" | Set-Content -Path $envFilePath
+          }
 
       - name: Upgrade Flutter Packages
         run: flutter pub upgrade
+
+      - name: Run Build Runner
+        run: flutter pub run build_runner build --delete-conflicting-outputs
 
       - name: Add CMake warning suppression flags
         run: echo 'set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /WX-")' >> windows/CMakeLists.txt
@@ -56,6 +58,12 @@ jobs:
       - name: Build Windows Debug
         run: flutter build windows --debug
 
+      - name: Copy assets folder to Build Directories
+        run: |
+          Copy-Item -Path "assets" -Destination "build/windows/x64/runner/Release" -Recurse -Force
+          Copy-Item -Path "assets" -Destination "build/windows/x64/runner/Debug" -Recurse -Force
+
+
       - name: Verify Build Artifacts Before Archiving
         run: |
           if (-Not (Test-Path "build/windows/x64/runner/Release")) {
@@ -66,16 +74,6 @@ jobs:
             echo "Error: Debug folder does not exist!"
             exit 1
           }
-
-      - name: Copy assets folder to Build Directories
-        run: |
-          Copy-Item -Path "assets" -Destination "build/windows/x64/runner/Release" -Recurse -Force
-          Copy-Item -Path "assets" -Destination "build/windows/x64/runner/Debug" -Recurse -Force
-
-      - name: Copy .env file to Build Directories
-        run: |
-          Copy-Item -Path "assets/.env" -Destination "build/windows/x64/runner/Release" -Force
-          Copy-Item -Path "assets/.env" -Destination "build/windows/x64/runner/Debug" -Force
 
       - name: Check Build Directory
         run: |
