feat: 프린트 양면/단면 인쇄 설정 추가 - print 모드 관련 icon 추가 - PagePrintProvider에 set 함수 추가 - 설정한 provider에 따라 상태가 바뀌는 SetupSubCard 클래스 정의 - setup 페이지 내 프린트 상태 설정 UI 추가

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,7 @@ flutter:
   assets:
     - assets/.env
     - assets/icons/
+    - assets/icons/print/
     - assets/images/
     - assets/labcurity/
     - assets/lang/
