feat : 앱 업데이트 기능 추가 - Setup 페이지에 업데이트 버튼 추가 - 현재 버전 및 GitHub 최신 배포 버전 비교 로직 구현 - 최신 버전 감지 및 안내 배너 표시 - 업데이트 실행 여부 확인용 다이얼로그 추가 - 업데이트 선택 시 JSON에 강제 업데이트 기록 및 런처 앱 실행

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   pretty_dio_logger: ^1.4.0
   pretty_animated_buttons: ^0.0.2
 
+  package_info_plus: ^8.3.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -71,6 +73,7 @@ flutter:
     - assets/lang/
     - assets/luca/
     - assets/sounds/
+    - assets/.env.version
 
   fonts:
     - family: MPLUSRounded
