feat : build_runner 캐시 초기화를 위해 .dart_tool 제거 - Windows 환경에 맞게 수정

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -24,7 +24,7 @@ jobs:
       - name: Clean and Setup Windows Build
         run: |
           flutter clean
-          rm -rf .dart_tool build
+          Remove-Item -Recurse -Force .dart_tool, build
           flutter config --enable-windows-desktop
           flutter create --platforms=windows .
           flutter pub get
