feat: eland, suwon 경로 수정

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,8 +73,8 @@ flutter:
     - assets/lang/
     - assets/luca/
     - assets/sounds/
-    - assets/adImages/eland
-    - assets/adImages/suwon
+    - assets/adImages/eland/
+    - assets/adImages/suwon/
     - assets/.env.version
 
   fonts:
