feat: github Action - .env 파일 내 전파자 슬랙 url 추가

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -36,6 +36,7 @@ jobs:
             "SLACK_WEBHOOK_ERROR_LOG_URL=${{ secrets.SLACK_WEBHOOK_ERROR_LOG_URL }}" | Add-Content -Path $envFilePath
             "SLACK_WEBHOOK_RIBBON_FILM_WARN_URL=${{ secrets.SLACK_WEBHOOK_RIBBON_FILM_WARN_URL }}" | Add-Content -Path $envFilePath
             "SLACK_WEBHOOK_WARNING_URL=${{ secrets.SLACK_WEBHOOK_WARNING_URL }}" | Add-Content -Path $envFilePath
+            "SLACK_WEBHOOK_BROADCAST_URL=${{ secrets.SLACK_WEBHOOK_BROADCAST_URL }}" | Add-Content -Path $envFilePath
           }
 
       - name: Upgrade Flutter Packages
