--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,9 @@ dependencies:
 
   package_info_plus: ^8.3.0
 
+  video_player: ^2.5.1
+  video_player_win: ^2.0.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -81,6 +84,7 @@ flutter:
     - assets/sounds/
     - assets/adImages/eland/
     - assets/adImages/suwon/
+    - assets/adVideos/
     - assets/.env.version
 
   fonts:
