feat: 아이콘 자동 생성 추가 - flutter_launcher_icons 패키지를 통한 아이콘 생성

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -39,6 +39,9 @@ jobs:
             "SLACK_WEBHOOK_BROADCAST_URL=${{ secrets.SLACK_WEBHOOK_BROADCAST_URL }}" | Add-Content -Path $envFilePath
           }
 
+      - name: Generate Windows Icon
+        run: dart run flutter_launcher_icons
+
       - name: Upgrade Flutter Packages
         run: flutter pub upgrade
 
