--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,10 @@ dependencies:
 
   path_provider: ^2.1.5
 
+  # Local Database
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
