feat: 앱 실행 시 KioskInfo 및 AlertDefinition 미리 로드
- app.dart에서 앱 시작과 동시에 초기 데이터 로딩 수행
  - getKioskMachineInfo() 호출을 앱 실행 시점으로 이동
  - alertDefinitionProvider.load() 호출 추가
  - 네트워크 에러 처리 함수 추가 및 앱 종료 플로우 구현

- setup_main_screen.dart에서 중복 로직 제거
  - addPostFrameCallback 내 초기화 로직을 app.dart로 이동
  - 중복 API 호출 방지 및 코드 중복 제거

- 앱 시작 시 데이터 미리 로드로 화면 전환 시 대기 시간 감소
- 네트워크 불안정 시 앱 시작 단계에서 조기 감지 및 처리

--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,17 @@ app.*.map.json
 *.env
 pubspec.lock
 macos/
+
+# Img
+*.png
+*.jpg
+*.jpeg
+*.gif
+*.bmp
+*.tiff
+*.ico
+*.webp
+*.svg
+*.png
+*.jpg
+*.jpeg
