--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
+  fake_async: ^1.3.1
   flutter_lints: ^5.0.0
   # Code Generation
   build_runner: ^2.4.14
